Add accuracy computation to evaluation loop

--- a/notebooks/base_learner_hyperparam_tuned.ipynb
+++ b/notebooks/base_learner_hyperparam_tuned.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
     "        'graph_feature_dim': 2,\n",
     "        'hidden_dim':        trial.suggest_int(\"hidden_dim\", 1, 64), # TODO set to 128\n",
     "        'output_dim':        1,\n",
-    "        'dropout':           trial.suggest_float(\"dropout\", 0, 1),\n",
+    "        'dropout':           trial.suggest_float(\"dropout\", 0, 0.5),\n",
     "        'epochs':            trial.suggest_int(\"epochs\", 5, 40), # TODO set to larger\n",
     "        'opt':               trial.suggest_categorical(\"optimizer\", [\"adam\", \"rmsprop\", \"sgd\", \"adagrad\"]),\n",
     "        'opt_scheduler':     'none',\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,21 +136,23 @@
     "\n",
     "\t### Training\n",
     "\n",
-    "\t_, test_losses, GNN, _ = train(train_loader, test_loader, args, trial)\n",
-    "\treturn test_losses"
+    "\t_, test_losses, test_accuracies, GNN, _ = train(train_loader, test_loader, args, trial)\n",
+    "\treturn test_accuracies[-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[I 2024-01-11 10:04:50,434] A new study created in memory with name: no-name-6beed788-2f18-4bcf-a6b9-88259815573f\n",
-      "Training:  21%|██        | 5/24 [01:20<04:56, 15.60s/Epochs]"
+      "[I 2024-01-11 15:23:25,212] A new study created in memory with name: no-name-d49f95da-ee76-499d-9767-34be395afa05\n",
+      "Training:   0%|          | 0/33 [00:00<?, ?Epochs/s]/home/alexhay/.local/lib/python3.10/site-packages/torch_geometric/utils/scatter.py:93: UserWarning: The usage of `scatter(reduce='max')` can be accelerated via the 'torch-scatter' package, but it was not found\n",
+      "  warnings.warn(f\"The usage of `scatter(reduce='{reduce}')` \"\n",
+      "Training:   6%|▌         | 2/33 [00:28<07:07, 13.80s/Epochs]"
      ]
     }
    ],
@@ -158,8 +160,8 @@
     "import optuna\n",
     "from optuna.trial import TrialState\n",
     "\n",
-    "study = optuna.create_study(direction=\"minimize\")\n",
-    "study.optimize(objective, n_trials=100, timeout=60000)\n",
+    "study = optuna.create_study(direction=\"maximize\")\n",
+    "study.optimize(objective, n_trials=2, timeout=60000)\n",
     "\n",
     "pruned_trials = study.get_trials(deepcopy=False, states=[TrialState.PRUNED])\n",
     "complete_trials = study.get_trials(deepcopy=False, states=[TrialState.COMPLETE])\n",
