--- a/numpy_testing.ipynb
+++ b/numpy_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,6 +192,95 @@
    "outputs": [],
    "source": [
     "8 * 16 * 0.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.6667)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = torch.tensor([1, 2, 1, 0, 0, 4, 4, 4, 4, 5])\n",
+    "c = torch.tensor([1, 5, 1, 0, 6, 4, 4, 4, 4, 12])\n",
+    "\n",
+    "b = torch.tensor([0, 0, 0, 1, 1, 1, 2, 2, 2, 2])\n",
+    "\n",
+    "# Create a 2D mask where each row corresponds to the indices in b\n",
+    "mask = torch.arange(len(torch.unique(b))).unsqueeze(1) == b.unsqueeze(0)\n",
+    "\n",
+    "# Use the mask to select elements from a and find the maximum along each row\n",
+    "result = torch.argmax(torch.where(mask, a.unsqueeze(0), float('-inf')), dim=1)\n",
+    "result2 = torch.argmax(torch.where(mask, c.unsqueeze(0), float('-inf')), dim=1)\n",
+    "acc = torch.sum(result == result2) / result.shape[0]\n",
+    "print(acc)\n",
+    "# print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True,  True, False, False, False, False, False, False,\n",
+       "        False],\n",
+       "       [False, False, False,  True,  True,  True, False, False, False,\n",
+       "        False],\n",
+       "       [False, False, False, False, False, False,  True,  True,  True,\n",
+       "         True],\n",
+       "       [False, False, False, False, False, False, False, False, False,\n",
+       "        False],\n",
+       "       [False, False, False, False, False, False, False, False, False,\n",
+       "        False],\n",
+       "       [False, False, False, False, False, False, False, False, False,\n",
+       "        False],\n",
+       "       [False, False, False, False, False, False, False, False, False,\n",
+       "        False],\n",
+       "       [False, False, False, False, False, False, False, False, False,\n",
+       "        False],\n",
+       "       [False, False, False, False, False, False, False, False, False,\n",
+       "        False],\n",
+       "       [False, False, False, False, False, False, False, False, False,\n",
+       "        False]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arange(len(np.unique(b)))[:, None] == b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.shape[0]"
    ]
   },
   {
