--- a/notebooks/base_learner.ipynb
+++ b/notebooks/base_learner.ipynb
@@ -126,397 +126,380 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:   0%|          | 0/25 [00:00<?, ?Epochs/s]/home/alexhay/.local/lib/python3.10/site-packages/torch_geometric/utils/scatter.py:93: UserWarning: The usage of `scatter(reduce='max')` can be accelerated via the 'torch-scatter' package, but it was not found\n",
-      "  warnings.warn(f\"The usage of `scatter(reduce='{reduce}')` \"\n"
+      "Training:   0%|          | 0/25 [00:00<?, ?Epochs/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.09270249410456553\n"
+      "TRAINING LOSS: 0.09370222374391907\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:   4%|▍         | 1/25 [00:03<01:28,  3.67s/Epochs]"
+      "Training:   4%|▍         | 1/25 [00:03<01:16,  3.19s/Epochs]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TEST ACCURACY: 0.0\n",
-      "TEST LOSS: 0.04022132605314255\n"
+      "TEST ACCURACY: 0.7160305380821228\n",
+      "TEST LOSS: 0.05837622657418251\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:   8%|▊         | 2/25 [00:06<01:07,  2.95s/Epochs]"
+      "Training:   8%|▊         | 2/25 [00:05<01:04,  2.80s/Epochs]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.05023890139415628\n",
-      "0.03616150247782107\n"
+      "TRAINING LOSS: 0.05303746697809058\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:  12%|█▏        | 3/25 [00:09<01:10,  3.21s/Epochs]"
+      "Training:  12%|█▏        | 3/25 [00:08<00:56,  2.58s/Epochs]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TEST ACCURACY: 0.0\n",
-      "TEST LOSS: 0.01895955763757229\n"
+      "TRAINING LOSS: 0.03729115923388742\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:  16%|█▌        | 4/25 [00:12<01:01,  2.92s/Epochs]"
+      "Training:  16%|█▌        | 4/25 [00:10<00:52,  2.48s/Epochs]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.03035742822434088\n",
-      "0.026108446229165305\n"
+      "TRAINING LOSS: 0.03160730098172137\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:  20%|██        | 5/25 [00:15<01:01,  3.09s/Epochs]"
+      "Training:  20%|██        | 5/25 [00:12<00:47,  2.38s/Epochs]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TEST ACCURACY: 0.0\n",
-      "TEST LOSS: 0.014448091387748718\n"
+      "TRAINING LOSS: 0.02793699535376078\n",
+      "TRAINING LOSS: 0.025030225666367693\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:  24%|██▍       | 6/25 [00:17<00:54,  2.85s/Epochs]"
+      "Training:  24%|██▍       | 6/25 [00:15<00:50,  2.68s/Epochs]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.023623614405738624\n",
-      "0.021102841385031698\n"
+      "TEST ACCURACY: 0.818320631980896\n",
+      "TEST LOSS: 0.01777854934334755\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:  28%|██▊       | 7/25 [00:21<00:54,  3.03s/Epochs]"
+      "Training:  28%|██▊       | 7/25 [00:18<00:46,  2.57s/Epochs]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TEST ACCURACY: 0.0\n",
-      "TEST LOSS: 0.01310906745493412\n"
+      "TRAINING LOSS: 0.022353694834697086\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:  32%|███▏      | 8/25 [00:23<00:48,  2.88s/Epochs]"
+      "Training:  32%|███▏      | 8/25 [00:20<00:43,  2.54s/Epochs]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.020244684367338953\n",
-      "0.019413553730324815\n"
+      "TRAINING LOSS: 0.02075968102437458\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:  36%|███▌      | 9/25 [00:27<00:47,  2.98s/Epochs]"
+      "Training:  36%|███▌      | 9/25 [00:23<00:39,  2.49s/Epochs]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TEST ACCURACY: 0.0\n",
-      "TEST LOSS: 0.012362548150122166\n"
+      "TRAINING LOSS: 0.02012281902632039\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:  40%|████      | 10/25 [00:29<00:42,  2.81s/Epochs]"
+      "Training:  40%|████      | 10/25 [00:25<00:36,  2.45s/Epochs]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.018031863427916267\n",
-      "0.017561818224473162\n"
+      "TRAINING LOSS: 0.018805822196237672\n",
+      "TRAINING LOSS: 0.01823810016361457\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:  44%|████▍     | 11/25 [00:32<00:42,  3.02s/Epochs]"
+      "Training:  44%|████▍     | 11/25 [00:28<00:38,  2.73s/Epochs]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TEST ACCURACY: 0.0\n",
-      "TEST LOSS: 0.011288085952401161\n"
+      "TEST ACCURACY: 0.8595420122146606\n",
+      "TEST LOSS: 0.017514832317829132\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:  48%|████▊     | 12/25 [00:35<00:36,  2.79s/Epochs]"
+      "Training:  48%|████▊     | 12/25 [00:31<00:34,  2.65s/Epochs]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.016861126830791683\n",
-      "0.015494288844371172\n"
+      "TRAINING LOSS: 0.01757386678727691\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:  52%|█████▏    | 13/25 [00:38<00:35,  2.96s/Epochs]"
+      "Training:  52%|█████▏    | 13/25 [00:33<00:30,  2.54s/Epochs]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TEST ACCURACY: 0.0\n",
-      "TEST LOSS: 0.010873080231249332\n"
+      "TRAINING LOSS: 0.01708589360814581\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:  56%|█████▌    | 14/25 [00:41<00:31,  2.84s/Epochs]"
+      "Training:  56%|█████▌    | 14/25 [00:35<00:26,  2.45s/Epochs]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.015649402543153466\n",
-      "0.015253651732227005\n"
+      "TRAINING LOSS: 0.016121728019724516\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:  60%|██████    | 15/25 [00:44<00:29,  2.96s/Epochs]"
+      "Training:  60%|██████    | 15/25 [00:38<00:24,  2.47s/Epochs]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TEST ACCURACY: 0.0\n",
-      "TEST LOSS: 0.010572009719908237\n"
+      "TRAINING LOSS: 0.016144052329325198\n",
+      "TRAINING LOSS: 0.015512907710260974\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:  64%|██████▍   | 16/25 [00:46<00:24,  2.75s/Epochs]"
+      "Training:  64%|██████▍   | 16/25 [00:41<00:24,  2.76s/Epochs]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.014764449444552642\n",
-      "0.014781551558259661\n"
+      "TEST ACCURACY: 0.8503816723823547\n",
+      "TEST LOSS: 0.012202868238091469\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:  68%|██████▊   | 17/25 [00:50<00:23,  3.00s/Epochs]"
+      "Training:  68%|██████▊   | 17/25 [00:44<00:21,  2.65s/Epochs]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TEST ACCURACY: 0.0\n",
-      "TEST LOSS: 0.009678961709141731\n"
+      "TRAINING LOSS: 0.01572642853729794\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:  72%|███████▏  | 18/25 [00:52<00:19,  2.85s/Epochs]"
+      "Training:  72%|███████▏  | 18/25 [00:46<00:17,  2.53s/Epochs]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.013736731978052617\n",
-      "0.013455699530447894\n"
+      "TRAINING LOSS: 0.014725783698257352\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:  76%|███████▌  | 19/25 [00:56<00:18,  3.05s/Epochs]"
+      "Training:  76%|███████▌  | 19/25 [00:48<00:14,  2.48s/Epochs]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TEST ACCURACY: 0.0\n",
-      "TEST LOSS: 0.009148688055574894\n"
+      "TRAINING LOSS: 0.014707386274901419\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:  80%|████████  | 20/25 [00:58<00:14,  2.88s/Epochs]"
+      "Training:  80%|████████  | 20/25 [00:51<00:12,  2.44s/Epochs]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.013203536010181057\n",
-      "0.013185927541071042\n"
+      "TRAINING LOSS: 0.0148550596599519\n",
+      "TRAINING LOSS: 0.014353986125128821\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:  84%|████████▍ | 21/25 [01:02<00:12,  3.04s/Epochs]"
+      "Training:  84%|████████▍ | 21/25 [00:54<00:10,  2.67s/Epochs]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TEST ACCURACY: 0.0\n",
-      "TEST LOSS: 0.011066797189414501\n"
+      "TEST ACCURACY: 0.8595420122146606\n",
+      "TEST LOSS: 0.012393969111144543\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:  88%|████████▊ | 22/25 [01:04<00:08,  2.87s/Epochs]"
+      "Training:  88%|████████▊ | 22/25 [00:56<00:07,  2.55s/Epochs]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.012840224013533089\n",
-      "0.012498346974095088\n"
+      "TRAINING LOSS: 0.013555108433574754\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:  92%|█████████▏| 23/25 [01:08<00:06,  3.03s/Epochs]"
+      "Training:  92%|█████████▏| 23/25 [00:58<00:04,  2.47s/Epochs]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TEST ACCURACY: 0.0\n",
-      "TEST LOSS: 0.009984132833778858\n"
+      "TRAINING LOSS: 0.013638384009611492\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:  96%|█████████▌| 24/25 [01:10<00:02,  2.91s/Epochs]"
+      "Training:  96%|█████████▌| 24/25 [01:01<00:02,  2.47s/Epochs]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.01266662621518768\n",
-      "0.012334264575970234\n"
+      "TRAINING LOSS: 0.01329332109384551\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training: 100%|██████████| 25/25 [01:14<00:00,  2.97s/Epochs]"
+      "Training: 100%|██████████| 25/25 [01:03<00:00,  2.54s/Epochs]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TEST ACCURACY: 0.0\n",
-      "TEST LOSS: 0.013666024431586266\n"
+      "TRAINING LOSS: 0.013108332710489048\n"
      ]
     },
     {
