Change training syntax since train now returns accuracy

--- a/notebooks/base_learner.ipynb
+++ b/notebooks/base_learner.ipynb
@@ -511,7 +511,7 @@
     }
    ],
    "source": [
-    "_, _, GNN, _ = train(train_loader, test_loader, args)"
+    "_, _, _, GNN, _ = train(train_loader, test_loader, args)"
    ]
   },
   {
@@ -1528,7 +1528,7 @@
     }
    ],
    "source": [
-    "_, _, GNN, _ = train(train_loader, test_loader, args)"
+    "_, _, _, GNN, _ = train(train_loader, test_loader, args)"
    ]
   },
   {
