--- a/notebooks/base_learner_hyperparam_tuned.ipynb
+++ b/notebooks/base_learner_hyperparam_tuned.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,23 +136,23 @@
     "\n",
     "\t### Training\n",
     "\n",
-    "\t_, test_losses, test_accuracies, GNN, _ = train(train_loader, test_loader, args, trial)\n",
+    "\t_, _, test_accuracies, GNN, _ = train(train_loader, test_loader, args, trial)\n",
     "\treturn test_accuracies[-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[I 2024-01-11 15:23:25,212] A new study created in memory with name: no-name-d49f95da-ee76-499d-9767-34be395afa05\n",
-      "Training:   0%|          | 0/33 [00:00<?, ?Epochs/s]/home/alexhay/.local/lib/python3.10/site-packages/torch_geometric/utils/scatter.py:93: UserWarning: The usage of `scatter(reduce='max')` can be accelerated via the 'torch-scatter' package, but it was not found\n",
+      "[I 2024-01-11 15:29:07,839] A new study created in memory with name: no-name-15363f80-bd2c-4d35-af2d-d32c51eebc6b\n",
+      "Training:   0%|          | 0/7 [00:00<?, ?Epochs/s]/home/alexhay/.local/lib/python3.10/site-packages/torch_geometric/utils/scatter.py:93: UserWarning: The usage of `scatter(reduce='max')` can be accelerated via the 'torch-scatter' package, but it was not found\n",
       "  warnings.warn(f\"The usage of `scatter(reduce='{reduce}')` \"\n",
-      "Training:   6%|▌         | 2/33 [00:28<07:07, 13.80s/Epochs]"
+      "Training:  86%|████████▌ | 6/7 [01:41<00:17, 17.25s/Epochs]"
      ]
     }
    ],
@@ -161,7 +161,7 @@
     "from optuna.trial import TrialState\n",
     "\n",
     "study = optuna.create_study(direction=\"maximize\")\n",
-    "study.optimize(objective, n_trials=2, timeout=60000)\n",
+    "study.optimize(objective, n_trials=100, timeout=60000)\n",
     "\n",
     "pruned_trials = study.get_trials(deepcopy=False, states=[TrialState.PRUNED])\n",
     "complete_trials = study.get_trials(deepcopy=False, states=[TrialState.COMPLETE])\n",
@@ -1121,7 +1121,7 @@
     }
    ],
    "source": [
-    "_, _, GNN, _ = train(train_loader, test_loader, args)"
+    "_, _, _, GNN, _ = train(train_loader, test_loader, args)"
    ]
   },
   {
