Implement learning classification

--- a/numpy_testing.ipynb
+++ b/numpy_testing.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import torch\n",
@@ -196,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -222,6 +231,43 @@
     "acc = torch.sum(result == result2) / result.shape[0]\n",
     "print(acc)\n",
     "# print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'torch_scatter'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/home/alexhay/GNN-OBM/numpy_testing.ipynb Cell 15\u001b[0m in \u001b[0;36m<cell line: 14>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22736f616c2d372e7374616e666f72642e656475222c2275736572223a22616c6578686179227d/home/alexhay/GNN-OBM/numpy_testing.ipynb#X23sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mosmnx\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mox\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22736f616c2d372e7374616e666f72642e656475222c2275736572223a22616c6578686179227d/home/alexhay/GNN-OBM/numpy_testing.ipynb#X23sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mutil\u001b[39;00m \u001b[39mimport\u001b[39;00m Dataset\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22736f616c2d372e7374616e666f72642e656475222c2275736572223a22616c6578686179227d/home/alexhay/GNN-OBM/numpy_testing.ipynb#X23sdnNjb2RlLXJlbW90ZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtorch_scatter\u001b[39;00m \u001b[39mimport\u001b[39;00m scatter_max, scatter_add\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22736f616c2d372e7374616e666f72642e656475222c2275736572223a22616c6578686179227d/home/alexhay/GNN-OBM/numpy_testing.ipynb#X23sdnNjb2RlLXJlbW90ZQ%3D%3D?line=16'>17</a>\u001b[0m scatter_max(a, b, dim\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)[\u001b[39m0\u001b[39m][b]\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'torch_scatter'"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "\n",
+    "import os\n",
+    "os.chdir('..')\n",
+    "from torch_geometric.loader import DataLoader\n",
+    "from gnn_library.util import train, save, load\n",
+    "from evaluate import evaluate_model, pp_output\n",
+    "import instance_generator as ig\n",
+    "import torch_converter as tc\n",
+    "import evaluate as ev\n",
+    "import osmnx as ox\n",
+    "from util import Dataset\n",
+    "from torch_scatter import scatter_max, scatter_add\n",
+    "\n",
+    "\n",
+    "scatter_max(a, b, dim=0)[0][b]"
    ]
   },
   {
@@ -281,6 +327,34 @@
    ],
    "source": [
     "a.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.7311, 0.0000, 0.0000, 0.7311, 0.0000, 0.0000],\n",
+      "        [0.0000, 0.0000, 0.0000, 0.7311, 0.0000, 0.0000]])\n",
+      "0.16164875030517578\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch.nn as nn\n",
+    "criterion    = nn.BCELoss()\n",
+    "m = nn.Sigmoid()\n",
+    "prediction   = torch.tensor([[1.,0.,0.,1.,0.,0.],[0.,0.,0.,1.,0.,0.]])\n",
+    "prediction = torch.where(prediction > 0, prediction, float('-inf'))\n",
+    "prediction   = m(prediction)\n",
+    "print(prediction)\n",
+    "label        = torch.tensor([[0.,0.,0.,1.,0.,0.], [0.,0.,0.,1.,0.,0.]])\n",
+    "loss         = criterion(input=prediction,target=label)\n",
+    "print(loss.item())"
    ]
   },
   {
