Add noise robustness pipeline + experiments

--- a/notebooks/base_learner_hyperparam_tuned.ipynb
+++ b/notebooks/base_learner_hyperparam_tuned.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mUnable to start Kernel 'local (Python 3.10.12)' due to a timeout waiting for the ports to get used. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import numpy as np\n",
@@ -55,17 +66,17 @@
     "        'processor':         'GENConv',\n",
     "        'head':              'regression',\n",
     "        'num_layers':        trial.suggest_int(\"num_layers{}\", 1, 6),\n",
-    "        'num_mlp_layers':    trial.suggest_int(\"num_mlp_layers{}\", 2, 4), # TODO set to larger\n",
+    "        'num_mlp_layers':    trial.suggest_int(\"num_mlp_layers{}\", 2, 5), # TODO set to larger\n",
     "        'aggr':              'max',\n",
     "        'batch_size':        2**trial.suggest_int(\"log_batch_size\", 1, 6), \n",
     "        'node_feature_dim':  4,\n",
     "        'edge_feature_dim':  1,\n",
     "        'graph_feature_dim': 2,\n",
-    "        'hidden_dim':        trial.suggest_int(\"hidden_dim\", 1, 64), # TODO set to 128\n",
+    "        'hidden_dim':        2**trial.suggest_int(\"hidden_dim\", 1, 7), # TODO set to 128\n",
     "        'output_dim':        1,\n",
     "        'dropout':           trial.suggest_float(\"dropout\", 0, 0.5),\n",
     "        'epochs':            trial.suggest_int(\"epochs\", 5, 100), # TODO set to larger\n",
-    "        'opt':               trial.suggest_categorical(\"optimizer\", [\"adam\", \"rmsprop\", \"sgd\", \"adagrad\"]),\n",
+    "        'opt':               trial.suggest_categorical(\"optimizer\", [\"adam\", \"adagrad\"]),\n",
     "        'opt_scheduler':     'none',\n",
     "        'opt_restart':       0,\n",
     "        'weight_decay':      5e-3, # TODO possibly modify\n",
