Updated geometric graph generation

--- a/notebooks/meta_learner.ipynb
+++ b/notebooks/meta_learner.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device('cuda:2' if torch.cuda.is_available() else 'cpu')\n",
+    "device = torch.device('cuda:7' if torch.cuda.is_available() else 'cpu')\n",
     "print(\"PyTorch has version {}\".format(torch.__version__))\n",
     "print('Using device:', device)"
    ]
@@ -41,8 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GNN1, args1 = load('GNN1', device)\n",
-    "GNN2, args2 = load('GNN2', device)\n",
+    "GNN1, args1 = load('GNN1_hyperparam_tuned', device)\n",
+    "GNN2, args2 = load('GNN2_hyperparam_tuned', device)\n",
     "# GNN3, args3 = load('GNN3', device)\n",
     "GREEDY = OBM_Greedy()"
    ]
@@ -253,7 +253,7 @@
     "    'opt_scheduler':     'none',\n",
     "    'opt_restart':       0,\n",
     "    'weight_decay':      5e-3,\n",
-    "    'lr':                0.0005,\n",
+    "    'lr':                0.001,\n",
     "    'device':            device\n",
     "}\n",
     "\n",
@@ -350,36 +350,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "args = {\n",
-    "    'processor':         'TEST2',\n",
-    "    'head':              'meta',\n",
-    "    'num_layers':        4,\n",
-    "    'num_mlp_layers':    2,\n",
-    "    'aggr':              'max',\n",
-    "    'batch_size':        6,\n",
-    "    'node_feature_dim':  7,\n",
-    "    'edge_feature_dim':  1,\n",
-    "    'graph_feature_dim': 2,\n",
-    "    'hidden_dim':        8,\n",
-    "    'output_dim':        3,\n",
-    "    'head_mlp_dim':      8,\n",
-    "    'dropout':           0,\n",
-    "    'epochs':            35,\n",
-    "    'opt':               'adam',\n",
-    "    'opt_scheduler':     'none',\n",
-    "    'opt_restart':       0,\n",
-    "    'weight_decay':      5e-3,\n",
-    "    'lr':                0.001,\n",
-    "    'device':            device\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "_, _, _, META_GNN_test, _ = train(train_loader, test_loader, args)"
    ]
   },
@@ -426,13 +396,13 @@
     "config = geom_config\n",
     "\n",
     "rng = np.random.default_rng(seed)\n",
-    "eval_instances = ig.sample_instances(m, n, 100, rng, **config)\n",
+    "eval_instances = ig.sample_instances(m, n, 1, rng, **config)\n",
     "\n",
     "rng = np.random.default_rng(seed)\n",
     "ratios1, win_rates1 = ev.evaluate_model(\n",
-    "    meta_model=META_GNN_test,\n",
+    "    meta_model=META_GNN,\n",
     "    meta_model_type='gnn',\n",
-    "    base_models=[GNN1, GNN2, GREEDY],\n",
+    "    base_models=[GNN1, GNN2],\n",
     "    instances=eval_instances,\n",
     "    batch_size=500,\n",
     "    rng=rng,\n",
