--- a/notebooks/base_learner.ipynb
+++ b/notebooks/base_learner.ipynb
@@ -1407,40 +1407,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 101/101 [29:33<00:00, 17.56s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best threshold value: 0.0 achieves CR: 0.05581373962215269\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from gnn_library.OBM_threshold_greedy import OBM_Threshold_Greedy\n",
     "from tqdm import tqdm\n",
+    "import util\n",
     "seed = np.random.randint(0, 500000)\n",
     "rng = np.random.default_rng(seed)\n",
     "\n",
     "\n",
     "thresholds = np.linspace(0, 1, 101)\n",
-    "thresholds = np.linspace(0, 1, 2) # TODO remove\n",
-    "#TODO max value in threshold should be max value observable in graphs (is not the case for osmnx graphs for the moment)\n",
     "thresholded_greedy_models = {threshold: OBM_Threshold_Greedy(threshold) for threshold in thresholds}\n",
     "\n",
-    "osmnx_config1 = {\n",
-    "    'graph_type': 'OSMNX',\n",
-    "    'location_graph': piedmont['location_graph']\n",
-    "}\n",
-    "osmnx_config2 = {\n",
-    "    'graph_type': 'OSMNX',\n",
-    "    'location_graph': geneva['location_graph']\n",
-    "}\n",
-    "osmnx_config3 = {\n",
-    "    'graph_type': 'OSMNX',\n",
-    "    'location_graph': carmel['location_graph']\n",
-    "}\n",
+    "# osmnx_config1 = {\n",
+    "#     'graph_type': 'OSMNX',\n",
+    "#     'location_graph': piedmont['location_graph']\n",
+    "# }\n",
+    "# osmnx_config2 = {\n",
+    "#     'graph_type': 'OSMNX',\n",
+    "#     'location_graph': geneva['location_graph']\n",
+    "# }\n",
+    "# osmnx_config3 = {\n",
+    "#     'graph_type': 'OSMNX',\n",
+    "#     'location_graph': carmel['location_graph']\n",
+    "# }\n",
     "\n",
-    "train_num = 10\n",
+    "node_configs = util.node_configs_GNN1\n",
+    "graph_configs = util.graph_configs_standard\n",
+    "train_num = 5\n",
     "train_instances = [\n",
-    "        *ig.sample_instances(8, 8, train_num, rng, **osmnx_config1),\n",
-    "        *ig.sample_instances(8, 8, train_num, rng, **osmnx_config2),\n",
-    "        *ig.sample_instances(8, 8, train_num, rng, **osmnx_config3),\n",
+    "        ig.sample_instances(node_config[0], node_config[1], train_num, rng, args.__dict__, **graph_config)\n",
+    "        for graph_config in graph_configs\n",
+    "        for node_config in node_configs\n",
     "]\n",
+    "\n",
+    "# flat map the train instances\n",
+    "train_instances = [instance for instances in train_instances for instance in instances]\n",
     "\n",
     "# train_instances = [\n",
     "#         *ig.sample_instances(8, 8, train_num, rng, **er_config),\n",
@@ -1453,7 +1479,7 @@
     "greedy_ratios = {}\n",
     "for threshold, model in tqdm(thresholded_greedy_models.items()): \n",
     "    rng = np.random.default_rng(seed)\n",
-    "    ratio = ev.evaluate_model(\n",
+    "    ratio, _ = ev.evaluate_model(\n",
     "        meta_model=None,\n",
     "        meta_model_type=None,\n",
     "        base_models=[model],\n",
@@ -1462,7 +1488,7 @@
     "        rng=rng,\n",
     "        num_realizations=5\n",
     "    )\n",
-    "    greedy_ratios[threshold] = np.mean(ratio[0])\n",
+    "    greedy_ratios[threshold] = np.mean(ratio['learned'])\n",
     "    \n",
     "\n",
     "max_threshold = max(greedy_ratios, key = greedy_ratios.get)\n",
@@ -1472,9 +1498,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0.0: 0.991188005856922, 0.01: 0.991188005856922, 0.02: 0.991188005856922, 0.03: 0.991188005856922, 0.04: 0.991188005856922, 0.05: 0.991188005856922, 0.06: 0.991188005856922, 0.07: 0.991188005856922, 0.08: 0.991188005856922, 0.09: 0.991188005856922, 0.1: 0.991188005856922, 0.11: 0.991188005856922, 0.12: 0.991188005856922, 0.13: 0.991188005856922, 0.14: 0.991188005856922, 0.15: 0.991188005856922, 0.16: 0.991188005856922, 0.17: 0.991188005856922, 0.18: 0.991188005856922, 0.19: 0.991188005856922, 0.2: 0.991188005856922, 0.21: 0.991188005856922, 0.22: 0.991188005856922, 0.23: 0.991188005856922, 0.24: 0.991188005856922, 0.25: 0.9902019295044397, 0.26: 0.9902019295044397, 0.27: 0.9902019295044397, 0.28: 0.9902019295044397, 0.29: 0.9902019295044397, 0.3: 0.9902019295044397, 0.31: 0.9902019295044397, 0.32: 0.9902019295044397, 0.33: 0.9902019295044397, 0.34: 0.9902019295044397, 0.35000000000000003: 0.9902019295044397, 0.36: 0.9902019295044397, 0.37: 0.9902019295044397, 0.38: 0.9843320526626002, 0.39: 0.9843320526626002, 0.4: 0.9843320526626002, 0.41000000000000003: 0.9843320526626002, 0.42: 0.9843320526626002, 0.43: 0.9843320526626002, 0.44: 0.9843320526626002, 0.45: 0.9843320526626002, 0.46: 0.9843320526626002, 0.47000000000000003: 0.9843320526626002, 0.48: 0.9843320526626002, 0.49: 0.9843320526626002, 0.5: 0.9843320526626002, 0.51: 0.9843320526626002, 0.52: 0.9843320526626002, 0.53: 0.9843320526626002, 0.54: 0.979407312358734, 0.55: 0.979407312358734, 0.56: 0.979407312358734, 0.5700000000000001: 0.979407312358734, 0.58: 0.9734972553262986, 0.59: 0.9734972553262986, 0.6: 0.9707233178603174, 0.61: 0.9707233178603174, 0.62: 0.9676675166779131, 0.63: 0.9676675166779131, 0.64: 0.9676675166779131, 0.65: 0.9676675166779131, 0.66: 0.9617583187059224, 0.67: 0.9617583187059224, 0.68: 0.9617583187059224, 0.6900000000000001: 0.9617583187059224, 0.7000000000000001: 0.9429772336544191, 0.71: 0.9429772336544191, 0.72: 0.9429772336544191, 0.73: 0.9132090907880122, 0.74: 0.9132090907880122, 0.75: 0.9132090907880122, 0.76: 0.9057725702260783, 0.77: 0.9020783975943706, 0.78: 0.9020783975943706, 0.79: 0.8791015038485144, 0.8: 0.8791015038485144, 0.81: 0.8583653281443541, 0.8200000000000001: 0.8583653281443541, 0.8300000000000001: 0.853483085754162, 0.84: 0.831583286795548, 0.85: 0.8242552510840838, 0.86: 0.8158680470715142, 0.87: 0.8158680470715142, 0.88: 0.7915186446478388, 0.89: 0.7634139147463666, 0.9: 0.7527738342621577, 0.91: 0.7173243331561661, 0.92: 0.7173243331561661, 0.93: 0.7139044132628289, 0.9400000000000001: 0.6817667716926843, 0.9500000000000001: 0.6297126048856235, 0.96: 0.6137721359416153, 0.97: 0.5844409766467589, 0.98: 0.4887017839169906, 0.99: 0.4150992656041641, 1.0: 0.4}\n"
+     ]
+    }
+   ],
    "source": [
     "print(greedy_ratios)"
    ]
@@ -1554,6 +1588,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GNN, args = load('GNN1_hyperparam_tuned', device)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 77,
    "metadata": {},
    "outputs": [
@@ -1568,12 +1611,12 @@
     }
    ],
    "source": [
-    "num_trials = 40\n",
+    "num_trials = 1\n",
     "batch_size = 500 #[int(min(32, x + y)) for (x, y) in node_configs]\n",
     "\n",
     "models = [(\"GNN\", GNN)]\n",
     "\n",
-    "node_config = (10,10)\n",
+    "node_configs = [(6,10), (10,20), (10,30), (10,60)]\n",
     "\n",
     "graph_configs = [\n",
     "    {\n",
@@ -1582,19 +1625,53 @@
     "        'weighted': True\n",
     "    },\n",
     "    {\n",
+    "        'graph_type': 'ER',\n",
+    "        'p': 0.5,\n",
+    "        'weighted': True\n",
+    "    },\n",
+    "    {\n",
+    "        'graph_type': 'ER',\n",
+    "        'p': 0.9,\n",
+    "        'weighted': True\n",
+    "    },\n",
+    "    {\n",
     "        'graph_type': 'BA',\n",
     "        'ba_param': 4,\n",
     "        'weighted': True\n",
     "    },\n",
     "    {\n",
-    "        'graph_type': 'GEOM',\n",
-    "        'threshold': 0.2,\n",
-    "        'scaling': 1 / np.sqrt(2),\n",
+    "        'graph_type': 'BA',\n",
+    "        'ba_param': 6,\n",
     "        'weighted': True\n",
-    "    }\n",
+    "    },\n",
+    "    {\n",
+    "        'graph_type': 'BA',\n",
+    "        'ba_param': 8,\n",
+    "        'weighted': True\n",
+    "    },\n",
+    "    {\n",
+    "        'graph_type': 'FEAT',\n",
+    "        'q': 0.5,\n",
+    "        'weighted': True\n",
+    "    },\n",
+    "    {\n",
+    "        'graph_type': 'FEAT',\n",
+    "        'q': 0.75,\n",
+    "        'weighted': True\n",
+    "    },\n",
+    "    {\n",
+    "        'graph_type': 'FEAT',\n",
+    "        'q': 0.85,\n",
+    "        'weighted': True\n",
+    "    },\n",
+    "    {\n",
+    "        'graph_type': 'FEAT',\n",
+    "        'q': 0.9,\n",
+    "        'weighted': True\n",
+    "    },\n",
     "]\n",
     "\n",
-    "data = {}\n",
+    "data = {node_config: {} for node_config in node_configs}\n",
     "\n",
     "for graph_config in graph_configs:\n",
     "        print(graph_config)\n",
