--- a/notebooks/experiment_size_generalization.ipynb
+++ b/notebooks/experiment_size_generalization.ipynb
@@ -12,7 +12,7 @@
     "import os\n",
     "os.chdir('..')\n",
     "from torch_geometric.loader import DataLoader\n",
-    "from gnn_library.util import train, save, load\n",
+    "from gnn_library.util import train, save, load, gen_train_input\n",
     "from evaluate import evaluate_model, pp_output\n",
     "import instance_generator as ig\n",
     "import torch_converter as tc\n",
@@ -20,6 +20,7 @@
     "import osmnx as ox\n",
     "from util import Dataset\n",
     "from gnn_library.OBM_threshold_greedy import OBM_Threshold_Greedy\n",
+    "from experiment_parameters import *\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -65,82 +66,18 @@
     "    'hidden_dim':        32,\n",
     "    'output_dim':        1,\n",
     "    'dropout':           0.0306,\n",
-    "    'epochs':            20,\n",
+    "    'epochs':            64,\n",
     "    'opt':               'adagrad',\n",
     "    'opt_scheduler':     'none',\n",
     "    'opt_restart':       0,\n",
     "    'weight_decay':      5e-3,\n",
     "    'lr':                0.0121,\n",
     "    'device':            device,\n",
-    "    'noise':             0.5 # Set to 0 to not train on noisy features\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_num = 200; test_num = 100\n",
-    "node_config = (30,10)\n",
-    "\n",
-    "er_config = {\n",
-    "    'graph_type': 'ER',\n",
-    "    'p': 0.75,\n",
-    "    'weighted': True\n",
-    "}\n",
-    "ba_config = {\n",
-    "    'graph_type': 'BA',\n",
-    "    'ba_param': 2,\n",
-    "    'weighted': True\n",
-    "}\n",
-    "geom_config = {\n",
-    "        'graph_type': 'GEOM',\n",
-    "        'q': 0.15,\n",
-    "        'd': 2,\n",
-    "        'weighted': True\n",
+    "    'noise':             0 # Set to 0 to not train on noisy features\n",
     "}\n",
     "\n",
-    "rng = np.random.default_rng(10)\n",
-    "\n",
-    "train_instances = [\n",
-    "        *ig.sample_instances(*node_config, train_num, rng, args, **er_config),\n",
-    "        *ig.sample_instances(*node_config, train_num, rng, args, **ba_config),\n",
-    "        *ig.sample_instances(*node_config, train_num, rng, args, **geom_config),\n",
-    "    ]\n",
-    "\n",
-    "test_instances = [\n",
-    "        *ig.sample_instances(*node_config, test_num, rng, args, **er_config),\n",
-    "        *ig.sample_instances(*node_config, test_num, rng, args, **ba_config),\n",
-    "        *ig.sample_instances(*node_config, test_num, rng, args, **geom_config),\n",
-    "    ]\n",
-    "\n",
-    "train_data = Dataset(tc._instances_to_train_samples(train_instances, args['head']))\n",
-    "test_data = Dataset(tc._instances_to_train_samples(test_instances, args['head']))\n",
-    "\n",
-    "train_loader = DataLoader(\n",
-    "    train_data,\n",
-    "    batch_size=args['batch_size'],\n",
-    "    shuffle=True,\n",
-    "    num_workers=4\n",
-    ")\n",
-    "\n",
-    "test_loader = DataLoader(\n",
-    "    test_data,\n",
-    "    batch_size=args['batch_size'],\n",
-    "    shuffle=True,\n",
-    "    num_workers=4\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_, _, _, GNN, _ = train(train_loader, test_loader, args)"
+    "train_loader, val_loader = gen_train_input(BASE_MODEL_TRAIN_CONFIG, args, seed=0)\n",
+    "_, _, _, GNN, _ = train(train_loader, val_loader, args)"
    ]
   },
   {
@@ -174,20 +111,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gnn_library.util as util\n",
     "import pickle\n",
+    "\n",
     "num_trials = 150\n",
-    "node_configs = [(2*x, x) for x in np.arange(10, 40, 2)]\n",
     "batch_size = 500\n",
     "\n",
+    "node_configs = EXPERIMENT_SIZE_GENERALIZATION_REGIMES\n",
+    "sizes = [x+y for (x,y) in node_configs]\n",
     "\n",
     "threshold = 0.35\n",
     "t_greedy = OBM_Threshold_Greedy(threshold) \n",
     "\n",
     "\n",
-    "graph_configs = util.graph_configs_standard\n",
-    "\n",
-    "sizes = [x+y for (x,y) in node_configs]\n",
+    "graph_configs = ALL_TESTING_GRAPH_CONFIGS\n",
     "\n",
     "data = [[] for _ in range(len(graph_configs))]\n",
     "\n",
@@ -266,13 +202,12 @@
     }
    ],
    "source": [
-    "import gnn_library.util as util\n",
-    "graph_configs = util.graph_configs_standard\n",
+    "graph_configs = ALL_TESTING_GRAPH_CONFIGS\n",
     "\n",
     "# To keep only the main graphs\n",
     "# filtered_data = {}\n",
     "# for graph_config, val in zip(graph_configs, data_copy):\n",
-    "# \tif graph_config in util.graph_configs_main:\n",
+    "# \tif graph_config in params.MAIN_TESTING_GRAPH_CONFIGS:\n",
     "# \t\tfiltered_data[frozenset(graph_config.items())] = val\n",
     "\n",
     "# To keep all the graphs\n",
