--- a/notebooks/hyperparameter_tuner.ipynb
+++ b/notebooks/hyperparameter_tuner.ipynb
@@ -13,12 +13,13 @@
     "os.chdir('..')\n",
     "from torch_geometric.loader import DataLoader\n",
     "from gnn_library.util import train, save, load\n",
-    "from evaluate import evaluate_model, pp_output\n",
+    "from evaluate import evaluate_model, pp_output, gen_train_input\n",
     "import instance_generator as ig\n",
     "import torch_converter as tc\n",
     "import evaluate as ev\n",
     "import osmnx as ox\n",
     "from util import Dataset\n",
+    "from experiment_parameters import *\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -84,61 +85,10 @@
    "source": [
     "def objective(trial):\n",
     "\targs = define_model(trial)\n",
-    "\ttrain_num = 200; test_num = 100\n",
     "\n",
-    "\ter_config = {\n",
-    "\t'graph_type': 'ER',\n",
-    "\t'p': 0.75,\n",
-    "\t'weighted': True\n",
-    "\t}\n",
-    "\tba_config = {\n",
-    "\t'graph_type': 'BA',\n",
-    "\t'ba_param': 4,\n",
-    "\t'weighted': True\n",
-    "\t}\n",
-    "\tgeom_config = {\n",
-    "\t\t'graph_type': 'GEOM',\n",
-    "\t\t'q': 0.15,\n",
-    "\t\t'd': 2,\n",
-    "\t\t'weighted': True\n",
-    "\t}\n",
+    "\ttrain_loader, val_loader = gen_train_input(BASE_MODEL_TRAIN_CONFIG, args, seed=0)\n",
     "\n",
-    "\trng = np.random.default_rng()\n",
-    "\n",
-    "\n",
-    "\ttrain_instances = [\n",
-    "\t\t*ig.sample_instances(10, 6, train_num, rng, args, **er_config),\n",
-    "\t\t*ig.sample_instances(10, 6, train_num, rng, args, **ba_config),\n",
-    "\t\t*ig.sample_instances(10, 6, train_num, rng, args, **geom_config),\n",
-    "\t]\n",
-    "\n",
-    "\ttest_instances = [\n",
-    "\t\t*ig.sample_instances(10, 6, test_num, rng, args, **er_config),\n",
-    "\t\t*ig.sample_instances(10, 6, test_num, rng, args, **ba_config),\n",
-    "\t\t*ig.sample_instances(10, 6, test_num, rng, args, **geom_config),\n",
-    "\t]\n",
-    "\n",
-    "\n",
-    "\ttrain_data = Dataset(tc._instances_to_train_samples(train_instances, args['head']))\n",
-    "\ttest_data = Dataset(tc._instances_to_train_samples(test_instances, args['head']))\n",
-    "\n",
-    "\ttrain_loader = DataLoader(\n",
-    "\ttrain_data,\n",
-    "\tbatch_size=args['batch_size'],\n",
-    "\tshuffle=True,\n",
-    "\tnum_workers=4\n",
-    "\t)\n",
-    "\n",
-    "\ttest_loader = DataLoader(\n",
-    "\ttest_data,\n",
-    "\tbatch_size=args['batch_size'],\n",
-    "\tshuffle=True,\n",
-    "\tnum_workers=4\n",
-    "\t)\n",
-    "\n",
-    "\t### Training\n",
-    "\n",
-    "\t_, _, test_accuracies, _, _ = train(train_loader, test_loader, args, trial)\n",
+    "\t_, _, test_accuracies, _, _ = train(train_loader, val_loader, args, trial)\n",
     "\tmodel_accuracy = test_accuracies[-1]\n",
     "\t\n",
     "\treturn model_accuracy"
