--- a/notebooks/parallel_hyperparameter_tuner.ipynb
+++ b/notebooks/parallel_hyperparameter_tuner.ipynb
@@ -12,7 +12,7 @@
     "import os\n",
     "os.chdir('..')\n",
     "from torch_geometric.loader import DataLoader\n",
-    "from gnn_library.util import train, save, load\n",
+    "from gnn_library.util import train, save, load, gen_train_input\n",
     "from evaluate import evaluate_model, pp_output\n",
     "import instance_generator as ig\n",
     "import torch_converter as tc\n",
