--- a/notebooks/experiment_noise_robustness.ipynb
+++ b/notebooks/experiment_noise_robustness.ipynb
@@ -6,21 +6,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "os.chdir('..')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import torch\n",
+    "import pickle\n",
     "import numpy as np\n",
     "\n",
-    "import os\n",
-    "os.chdir('..')\n",
-    "from torch_geometric.loader import DataLoader\n",
+    "\n",
     "from gnn_library.util import train, save, load, gen_train_input\n",
-    "from evaluate import evaluate_model, pp_output\n",
-    "import instance_generator as ig\n",
-    "import torch_converter as tc\n",
+    "from evaluate import evaluate_model, \n",
+    "from instance_generator import sample_instances\n",
+    "\n",
     "import evaluate as ev\n",
-    "import osmnx as ox\n",
-    "from util import Dataset\n",
-    "from gnn_library.OBM_threshold_greedy import OBM_Threshold_Greedy\n",
-    "from experiment_parameters import *\n",
+    "from params import *\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -47,36 +53,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "args = {\n",
-    "    'processor':         'GENConv',\n",
-    "    'head':              'regression',     \n",
-    "    'num_layers':        3,\n",
-    "    'num_mlp_layers':    3,\n",
-    "    'aggr':              'max',\n",
-    "    'batch_size':        8,\n",
-    "    'node_feature_dim':  5,\n",
-    "    'edge_feature_dim':  1,\n",
-    "    'graph_feature_dim': 2,\n",
-    "    'hidden_dim':        32,\n",
-    "    'output_dim':        1,\n",
-    "    'dropout':           0.0306,\n",
-    "    'epochs':            64,\n",
-    "    'opt':               'adagrad',\n",
-    "    'opt_scheduler':     'none',\n",
-    "    'opt_restart':       0,\n",
-    "    'weight_decay':      5e-3,\n",
-    "    'lr':                0.0121,\n",
-    "    'device':            device,\n",
-    "    'noise':             0 # Set to 0 to not train on noisy features\n",
-    "}"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -85,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +89,7 @@
     "            'weight_decay':      5e-3,\n",
     "            'lr':                0.0121,\n",
     "            'device':            device,\n",
-    "            'noise':             noise_value # Set to 0 to not train on noisy features\n",
+    "            'noise':             noise_value\n",
     "        }\n",
     "\n",
     "\n",
@@ -136,8 +112,8 @@
     "def get_models(noise_values):\n",
     "\tmodels = []\n",
     "\tfor noise_value in noise_values:\n",
-    "\t\tGNN, _ = load(f\"GNN_noise_{noise_value}\", device)\n",
-    "\t\tmodels.append((f\"GNN_{args['noise']}\", GNN))\n",
+    "\t\tGNN, args = load(f\"GNN_noise_{noise_value}\", device)\n",
+    "\t\tmodels.append((f\"GNN_{args.noise}\", GNN))\n",
     "\treturn models"
    ]
   },
@@ -160,20 +136,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gnn_library.util as util\n",
-    "import pickle\n",
     "\n",
+    "rng = np.random.default_rng(seed=0)\n",
     "num_trials = 100\n",
     "batch_size = 500\n",
-    "node_configs = EXPERIMENT_NOISE_ROBUSTNESS_REGIMES\n",
     "graph_configs = ALL_TESTING_GRAPH_CONFIGS\n",
-    "\n",
-    "threshold = 0.35\n",
-    "t_greedy = OBM_Threshold_Greedy(threshold) \n",
-    "\n",
-    "rng = np.random.default_rng()\n",
+    "node_configs = EXPERIMENT_NOISE_ROBUSTNESS_REGIMES\n",
+    "baselines_kwargs = {\n",
+    "    'greedy': {},\n",
+    "    'greedy_t': {'threshold': 0.35},\n",
+    "    'lp_rounding': {}\n",
+    "}\n",
     "\n",
     "data = [{node_config:[] for node_config in node_configs} for _ in range(len(graph_configs))]\n",
+    "\n",
     "for data_index, graph_config in enumerate(graph_configs):\n",
     "    print(f\"current graph {graph_config}\")\n",
     "\n",
@@ -181,8 +157,13 @@
     "        for noise_value, model in zip(NOISE_VALUES, models):\n",
     "            print(f\"Evaluating model for noise {noise_value}\")\n",
     "\n",
-    "            args['noise'] = noise_value\n",
-    "            instances = ig.sample_instances(*node_config, num_trials, rng, args, **graph_config)\n",
+    "            instances = sample_instances(\n",
+    "                *node_config, \n",
+    "                num_trials,\n",
+    "                rng,\n",
+    "                {'noise': noise_value},\n",
+    "                **graph_config\n",
+    "            )\n",
     "\n",
     "            cr_ratios, _ = evaluate_model(\n",
     "                meta_model=None,\n",
@@ -192,20 +173,9 @@
     "                batch_size=batch_size,\n",
     "                rng=rng,\n",
     "                num_realizations=5,\n",
-    "                baselines=['greedy', 'lp_rounding']\n",
+    "                baselines=['greedy', 'greedy_t', 'lp_rounding'],\n",
+    "                **baselines_kwargs\n",
     "            )\n",
-    "\n",
-    "            t_greedy_ratio, _ = evaluate_model(\n",
-    "                meta_model=None,\n",
-    "                meta_model_type=None,\n",
-    "                base_models=[t_greedy],\n",
-    "                instances=instances,\n",
-    "                batch_size=batch_size,\n",
-    "                rng=rng,\n",
-    "                num_realizations=5,\n",
-    "            )\n",
-    "\n",
-    "            cr_ratios['threshold_greedy'] = t_greedy_ratio['learned']\n",
     "\n",
     "            data[data_index][node_config].append(cr_ratios)\n",
     "\n",
