--- a/notebooks/hyperparameter_tuner.ipynb
+++ b/notebooks/hyperparameter_tuner.ipynb
@@ -6,19 +6,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import numpy as np\n",
-    "\n",
     "import os\n",
-    "os.chdir('..')\n",
-    "from torch_geometric.loader import DataLoader\n",
-    "from gnn_library.util import train, save, load\n",
-    "from evaluate import evaluate_model, pp_output, gen_train_input\n",
-    "import instance_generator as ig\n",
-    "import torch_converter as tc\n",
-    "import evaluate as ev\n",
-    "import osmnx as ox\n",
-    "from util import Dataset\n",
+    "os.chdir('..')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import optuna\n",
+    "from optuna.trial import TrialState\n",
+    "from gnn_library.util import train, gen_train_input\n",
     "from experiment_parameters import *\n",
     "\n",
     "%load_ext autoreload\n",
@@ -56,20 +57,20 @@
     "        'processor':         'GENConv',\n",
     "        'head':              'regression',\n",
     "        'num_layers':        trial.suggest_int(\"num_layers{}\", 1, 6),\n",
-    "        'num_mlp_layers':    trial.suggest_int(\"num_mlp_layers{}\", 1, 5), # TODO set to larger\n",
+    "        'num_mlp_layers':    trial.suggest_int(\"num_mlp_layers{}\", 1, 5),\n",
     "        'aggr':              'max',\n",
     "        'batch_size':        2**trial.suggest_int(\"log_batch_size\", 1, 6), \n",
     "        'node_feature_dim':  5,\n",
     "        'edge_feature_dim':  1,\n",
     "        'graph_feature_dim': 2,\n",
-    "        'hidden_dim':        2**trial.suggest_int(\"hidden_dim\", 1, 7), # TODO set to 128\n",
+    "        'hidden_dim':        2**trial.suggest_int(\"hidden_dim\", 1, 7),\n",
     "        'output_dim':        1,\n",
     "        'dropout':           trial.suggest_float(\"dropout\", 0, 0.5),\n",
-    "        'epochs':            2**trial.suggest_int(\"epochs\", 2, 8), # TODO set to larger\n",
+    "        'epochs':            2**trial.suggest_int(\"epochs\", 2, 8),\n",
     "        'opt':               trial.suggest_categorical(\"optimizer\", [\"adam\", \"adagrad\"]),\n",
     "        'opt_scheduler':     'none',\n",
     "        'opt_restart':       0,\n",
-    "        'weight_decay':      5e-3, # TODO possibly modify\n",
+    "        'weight_decay':      5e-3,\n",
     "        'lr':                trial.suggest_float(\"lr\", 1e-5, 1e-1, log=True),\n",
     "        'device':            device,\n",
     "        'noise':             0\n",
@@ -283,10 +284,13 @@
     }
    ],
    "source": [
-    "import optuna\n",
-    "from optuna.trial import TrialState\n",
     "\n",
-    "study = optuna.create_study(study_name='hyperparam-study', direction='maximize', storage='sqlite:///hyperparam.db', load_if_exists=True)\n",
+    "study = optuna.create_study(\n",
+    "\tstudy_name='hyperparam-study',\n",
+    "\tdirection='maximize',\n",
+    "\tstorage='sqlite:///hyperparam.db',\n",
+    "\tload_if_exists=True\n",
+    ")\n",
     "study.optimize(objective, n_trials=1000, timeout=60000)\n",
     "\n",
     "pruned_trials = study.get_trials(deepcopy=False, states=[TrialState.PRUNED])\n",
