--- a/notebooks/exp_size_generalization.ipynb
+++ b/notebooks/exp_size_generalization.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device('cuda:2' if torch.cuda.is_available() else 'cpu')\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "print(\"PyTorch has version {}\".format(torch.__version__))\n",
     "print('Using device:', device)\n",
     "\n",
@@ -48,6 +48,13 @@
    "metadata": {},
    "source": [
     "## Size generalization experiment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Evaluate CRs for all graph configurations across different graph sizes"
    ]
   },
   {
@@ -99,8 +106,15 @@
     "        data[data_index].append(cr_ratios)\n",
     "    \n",
     "\n",
-    "    with open(f\"saved_runs/transferability_gnn2.pickle\", 'wb') as handle:\n",
+    "    with open(f\"experiments/transferability_gnn2.pickle\", 'wb') as handle:\n",
     "        pickle.dump(data, handle, protocol=pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate size generalization plots"
    ]
   },
   {
@@ -109,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f\"saved_runs/transferability_gnn2.pickle\", 'rb') as handle:\n",
+    "with open(f\"experiments/transferability_gnn2.pickle\", 'rb') as handle:\n",
     "    results = pickle.load(handle)\n",
     "\n",
     "filtered_results = {frozenset(g.items()): data for g, data in zip(graph_configs, results)}\n",
